--- a/src/assets/scss/boldgrid/_comments.scss
+++ b/src/assets/scss/boldgrid/_comments.scss
@@ -159,8 +159,3 @@ time.entry-date.updated:before {
 	margin-right: .5em;
 	margin-left: .3em;
 }
-
-.group-blog .byline,
-span.author.vcard {
-	margin-left: .3em;
-}
